--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 }
 dependencies {
     compile "com.opencsv:opencsv:4.0"
+    compile 'com.google.code.gson:gson:2.2.+'
 }
 dependencies {
     compile(files("C:\\Users\\Sampada\\IdeaProjects\\CommonCSVBuilder\\out\\artifacts\\CommonCSVBuilder_jar\\CommonCSVBuilder.jar"))
